--- a/static/html/baiduMap.html
+++ b/static/html/baiduMap.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-  <script type="text/javascript" src="http://api.map.baidu.com/api?type=quick&ak=ddRvdqAfkofTu0vDhanMqhVs6VP53T4T&v=1.0"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=YEn2GeM1Qg0anfcRBywFe0e6"></script>
   <title>地图展示</title>
 </head>
 <body style="margin:0;">
